JN-525 site content save (#514)